[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depHy"
version = "1.0.0"
description = "Chemistry reaction prediction API"
requires-python = ">=3.11,<3.12"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "numpy==1.21.6",
    "scikit-learn==1.0.2",
    "gunicorn==20.1.0",
    "requests==2.28.2",
]

[tool.setuptools]
packages = ["app"] 