[build-system]
requires = ["setuptools>=65", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "depHy"
version = "1.0.0"
description = "Chemistry reaction prediction API"
requires-python = ">=3.9,<3.14"
dependencies = [
    "Flask==2.3.3",
    "Flask-CORS==4.0.0",
    "numpy==1.26.2",
    "scikit-learn==1.3.0",
    "gunicorn==21.2.0",
    "requests==2.31.0",
]

[tool.setuptools]
packages = ["app"] 